CREATE TABLE users (
    id CHARACTER VARYING(100) NOT NULL PRIMARY KEY,
    email CHARACTER VARYING(150) NOT NULL,
    name CHARACTER VARYING(150) NOT NULL,
    birthday DATE NOT NULL,
    password CHARACTER VARYING(150) NOT NULL
);

CREATE TABLE artists (
    id CHARACTER VARYING(100) NOT NULL PRIMARY KEY,
    name CHARACTER VARYING(150) NOT NULL,
    instagram CHARACTER VARYING(150),
    facebook CHARACTER VARYING(150),
    twitter CHARACTER VARYING(150),
    wikipedia CHARACTER VARYING(150),
    bio TEXT
);

CREATE TABLE albums (
    id CHARACTER VARYING(100) NOT NULL PRIMARY KEY,
    title CHARACTER VARYING(150) NOT NULL,
    release CHARACTER VARYING(150) NOT NULL,
    image CHARACTER VARYING(150) NOT NULL
);

SELECT * FROM albums;

CREATE TABLE songs (
    id CHARACTER VARYING(100) NOT NULL PRIMARY KEY,
    album_id CHARACTER VARYING(150) NOT NULL,
    title CHARACTER VARYING(150) NOT NULL,
    duration INT NOT NULL,
    CONSTRAINT fk_albums_songs FOREIGN KEY (album_id) REFERENCES albums(id)
);

SELECT * FROM songs;

CREATE TABLE concerts (
    id CHARACTER VARYING(100) NOT NULL  PRIMARY KEY,
    location CHARACTER VARYING(150) NOT NULL,
    lon DOUBLE PRECISION,
    lat DOUBLE PRECISION,
    event_at TIMESTAMP NOT NULL ,
    url CHARACTER VARYING(150)NOT NULL
);